# ISIA_grupo_1

./: .gitignore  CLAUDE.md  Prompts_Proyecto.md  README.md  docker-compose.yml  proyecto_entrega_1.md  proyecto_entrega_2.md  proyecto_entrega_3.md  proyecto_entrega_4.md  rubricas_evaluacion.md
backend/: .dockerignore  Dockerfile  list_accountants.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py
backend/src/: config.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routers/: admin.py  auth.py  contador.py  contratos.py  entidad_contratante.py  liquidaciones.py  parametros_publicos.py  perfiles.py
backend/src/api/schemas/: admin.py  comparacion.py  contratos.py  entidad_contratante.py  mfa.py  perfiles.py
backend/src/application/services/: auth_service.py  liquidacion_service.py  mfa_service.py
backend/src/domain/: enums.py  exceptions.py
backend/src/engine/: aporte_calculator.py  dtos.py  ibc_calculator.py  liquidacion_engine.py  piso_proteccion.py  retencion_calculator.py  validations.py
backend/src/infrastructure/: bootstrap.py  database.py
backend/src/infrastructure/models/: __init__.py  acceso_contador_perfil.py  acceso_entidad_contratante.py  contrato.py  liquidacion_confirmacion.py  liquidacion_periodo.py  liquidacion_revision.py  perfil_contratista.py  snapshot_normativo.py  tabla_ciiu.py  tabla_retencion_383.py  usuario.py  usuario_mfa.py
backend/src/infrastructure/pdf/: report_builder.py
backend/src/infrastructure/repositories/: acceso_contador_repo.py  acceso_entidad_repo.py  contrato_repo.py  liquidacion_confirmacion_repo.py  liquidacion_repo.py  liquidacion_revision_repo.py  parametros_repo.py  perfil_repo.py  usuario_mfa_repo.py  usuario_repo.py
backend/tests/: conftest.py  test_admin_parametros.py  test_comparacion_historica.py  test_entidad_contratante.py  test_phase1_router_coverage.py
backend/tests/integration/: conftest.py  test_admin_parametros.py  test_append_only.py  test_auth_endpoints.py  test_comparacion_historica.py  test_entidad_contratante.py  test_mfa_auth.py  test_perfiles_contratos.py  test_repository_coverage.py
backend/tests/unit/engine/: test_aportes_calculator.py  (+3 more)
(+90 files in other folders)
